# kawaiipy

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
kawaiipy/: __init__.py  exceptions.py  types.py
